Blackpurl/src/objects/Coli_Fifo_Line_Item_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_Cost_Fifo__c</fullName>
        <label>Adjusted Cost Fifo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Cost__c</fullName>
        <label>Avg Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <description>Lookup to Co line item from invoice items</description>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Coli Fifo Line Items Junction</relationshipLabel>
        <relationshipName>Coli_Fifo_Line_Items_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Cost__c</fullName>
        <label>Last Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_FIFO_Bucket_Activity_Line_Item__c</fullName>
        <description>Lookup to activity line item (child of fifo bucket)</description>
        <label>Part FIFO Bucket Activity Line Item</label>
        <referenceTo>Part_FIFO_Bucket_Activity_Line_Item__c</referenceTo>
        <relationshipLabel>Coli Fifo Line Items Junction</relationshipLabel>
        <relationshipName>Coli_Fifo_Line_Items_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part_FIFO_Bucket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part FIFO Bucket</label>
        <referenceTo>Part_FIFO_Bucket__c</referenceTo>
        <relationshipLabel>Coli Fifo Line Items Junction</relationshipLabel>
        <relationshipName>Coli_Fifo_Line_Items_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Coli Fifo Line Item Junction</label>
    <nameField>
        <displayFormat>CF-{00000000}</displayFormat>
        <label>Coli Fifo Line Item Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coli Fifo Line Items Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>